java21 upgrades, i18n
git-svn-id: https://subversion.assembla.com/svn/smart-cs/trunk@9279 37136b1e-4cb1-4992-8394-573b48a9bdce