@@ -22,6 +22,7 @@
 package org.wcs.smart.asset.ui.views.map.udig;
 
 import java.io.Serializable;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -69,7 +70,7 @@ public class AssetStationSummaryServiceExtension implements ServiceExtension {
 	public static URL createURL(Map<String, Serializable> params){
 		String url = "smart://smartdb/asset/summary"; //$NON-NLS-1$
 		try{
-			return new URL(null, url, CorePlugin.RELAXED_HANDLER);
+			return URL.of(URI.create(url), CorePlugin.RELAXED_HANDLER);
 		}catch (Throwable t){
 			return null;
 		}
