@@ -241,8 +241,8 @@ public class CtJsonExportUtils {
 		}
 		
 		for (Language l : ca.getLanguages()) {
-			locale = new Locale(l.getCode());
-			locale = new Locale(locale.getLanguage());
+			locale = Locale.of(l.getCode());
+			locale = Locale.of(locale.getLanguage());
 			
 			if (locale.getLanguage().equalsIgnoreCase("en")) continue; //$NON-NLS-1$
 			if (locale.getLanguage().equalsIgnoreCase(Locale.getDefault().getLanguage())) continue;
