@@ -22,6 +22,7 @@
 package org.wcs.smart.er.ui.mision.udig;
 
 import java.io.Serializable;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -109,7 +110,7 @@ public class MissionServiceExtension implements ServiceExtension {
 			url += (String)params.get(MISSION_UUID_KEY);
 		}
 		try{
-			return new URL(null, url, CorePlugin.RELAXED_HANDLER);
+			return URL.of(URI.create(url), CorePlugin.RELAXED_HANDLER);
 		}catch (Throwable t){
 			return null;
 		}
