@@ -23,6 +23,7 @@ package org.wcs.smart.i2.udig.entity;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.UUID;
 
@@ -67,7 +68,7 @@ public class IntelEntityGeoResource extends IGeoResource implements IWorkingSetR
 		URL serviceIdentifer = service.getIdentifier();
 		
 		try{
-			this.url = new URL(serviceIdentifer, serviceIdentifer.toExternalForm() + "#" + typeName, CorePlugin.RELAXED_HANDLER); //$NON-NLS-1$
+			this.url = URL.of(URI.create(serviceIdentifer.toExternalForm() + "#" + typeName), CorePlugin.RELAXED_HANDLER); //$NON-NLS-1$
 		 } catch (MalformedURLException e) {
              throw new IllegalArgumentException("The service URL must not contain a #", e); //$NON-NLS-1$
          }
