@@ -22,6 +22,7 @@
 package org.wcs.smart.i2.udig.entity;
 
 import java.io.Serializable;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -97,7 +98,7 @@ public class IntelEntityServiceExtension implements ServiceExtension {
 		}
 		String url = "smart://smartdb/intel2/entity/location/" + (String)params.get(ENTITY_UUID_KEY); //$NON-NLS-1$
 		try{
-			return new URL(null, url, CorePlugin.RELAXED_HANDLER);
+			return URL.of(URI.create(url), CorePlugin.RELAXED_HANDLER);
 		}catch (Throwable t){
 			return null;
 		}
