@@ -22,6 +22,7 @@
 package org.wcs.smart.i2.udig.query;
 
 import java.io.Serializable;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -111,7 +112,7 @@ public class QueryServiceExtension implements ServiceExtension {
 		}
 		
 		try{
-			return new URL(null, url, CorePlugin.RELAXED_HANDLER);
+			return URL.of(URI.create(url), CorePlugin.RELAXED_HANDLER);
 		}catch (Throwable t){
 			return null;
 		}
