@@ -22,7 +22,7 @@
 package org.wcs.smart.query.ui;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashMap;
 
 import org.eclipse.core.commands.AbstractHandler;
@@ -119,7 +119,7 @@ public class NewQueryDropDownHandler {
 		if (e instanceof MHandledMenuItem) {
 			MenuItem mi = new MenuItem(menu, SWT.PUSH);
 			try {
-				ImageDescriptor id = ImageDescriptor.createFromURL(new URL(e.getIconURI()));
+				ImageDescriptor id = ImageDescriptor.createFromURL(URI.create(e.getIconURI()).toURL());
 				Image img = id.createImage();
 				mi.addListener(SWT.Dispose, evt->img.dispose());
 				mi.setImage(  img  );
@@ -204,7 +204,7 @@ public class NewQueryDropDownHandler {
 
 				try {
 					if (e.getIconURI() != null) {
-						ImageDescriptor id = ImageDescriptor.createFromURL(new URL(e.getIconURI()));
+						ImageDescriptor id = ImageDescriptor.createFromURL(URI.create(e.getIconURI()).toURL());
 						Image img = id.createImage();
 						ti.addListener(SWT.Dispose, evt->img.dispose());
 						ti.setImage(  img  );
